[package]
name = "pia-wg"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.0"
license = "MIT OR Apache-2.0"

[dependencies]
base64ct = { version = "1.6.0", features = ["std"] }
clap = { version = "4.5.9", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
erased-serde = "0.4.5"
fastping-rs = "0.2.4"
rand = "0.8.5"
rustls = "0.23.11"
rustls-pemfile = { version = "2.1.2", default-features = false }
rustls-platform-verifier = "0.3.2"
rustls-webpki = "0.102.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_ini = "0.2.0"
serde_json = "1.0.120"
slog = { version = "2.7.0", features = ["nested-values", "erased-serde"] }
slog-async = "2.8.0"
slog-term = "2.9.1"
thiserror = "1.0.63"
ureq = { version = "2.10.0", features = ["json", "tls"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
